Corrected spacing on PPL teams page

--- a/src/Components/events/ppl/teams/pplteams.css
+++ b/src/Components/events/ppl/teams/pplteams.css
@@ -9,7 +9,7 @@
 }
 
 .ppl-team-images {
-    max-width: 100%;
+    min-width: 100%;
     height: auto;
     display: block;
 }
